# covariance-mocks

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  TESTING.md  current-project.md  pyproject.toml
.pipeline_agent/: pipeline-manifest.yaml
config/defaults/: nersc.yaml
config/examples/: README.md  alpha.yaml  alpha_production.yaml  covariance_v1.yaml  production.yaml  production_campaign.yaml  test_campaign.yaml  test_production.yaml  test_template.yaml
config/productions/: alpha.yaml  rehearsal100.yaml  smoketest100.yaml
config/schemas/: campaign_schema.yaml  production_schema.yaml
docs/: Makefile  api.md  requirements.txt
docs/source/: api.rst  campaign_management.rst  conf.py  data_access.rst  development.rst  index.rst  installation.rst  overview.rst  producing_the_mocks.rst  production_management.rst  quickstart.rst  selection.rst  user_guide.rst
scripts/: auto_refresh.sh  backfill_sidecars.sh  box_stats.py  build_worklist.py  build_worklist_breadth.py  build_worklist_sfr.py  dashboard_refresh_once.sh  deploy_portal.sh  generate_single_mock.py  launch_sfr_pool.sh  load_env.sh  make_mocks.sh  make_sfh_cov_mocks.py  plot_mock_catalog.py  pool_topup.sh  refresh_highlight.sh  run_campaign.py  run_production.py  run_validation.py  sfr_calibrate_apply.py  stage_to_m4943.sh  validate_one_box.sh  validate_sfr_recal.py  worker.sh  worker_sfr.sh  worker_sfr_pack.sh
src/covariance_mocks/: __init__.py  _version.py  campaign_config.py  campaign_manager.py  cli.py  config_registry.py  data_loader.py  emission_lines.py  galaxy_generator.py  hdf5_writer.py  mpi_setup.py  production_config.py  production_manager.py  sfr_recal.py  utils.py
src/covariance_mocks/selection/: __init__.py  catalog.py  nsfr.py  sample.py  (+1 more)
tests/: __init__.py  conftest.py  integration_core.py  test_campaign_config.py  test_campaign_manager.py  test_catalog_validation.py  test_cli.py  test_config_registry.py  test_data_loader.py  test_emission_lines.py  test_integration_core.py  test_production_config.py  test_production_manager.py  test_selection.py  test_system_integration.py  test_utils.py
